--- a/style.cfg
+++ b/style.cfg
@@ -20,7 +20,7 @@
 
 # General Information about this style
 name = square
-copyright = © phpBB Limited, 2007
+copyright = © Fred Rimbert, 2021
 style_version = 1.3.10
 phpbb_version = 3.3.10
 
